--- a/.github/workflows/chaiyouge1940.yml
+++ b/.github/workflows/chaiyouge1940.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '6 1/6 * * *'
-jobs:
+jobs:  # 7003
   build:
     runs-on: ubuntu-latest
     steps:
